Fix bug where menu header is not centered in firefox
I guess place-items property is not supported yet in firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -225,7 +225,7 @@ header {
     color: var(--font-light-clr);
     font-size: var(--title-size);
     background: var(--primary-clr);
-    place-items: center;
+    text-align: center;
     padding: 50px 0px 50px 0px;
   }
 
